--- a/style.css
+++ b/style.css
@@ -272,6 +272,7 @@ opacity: 0.7;
 .fa-magnifying-glass{
     padding: 0 !important;
     background-color: transparent !important;
+    border:none !important;
 }
 .fa-microphone{
     display: none;
